admin view updated